--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
+    "nyan-progress-webpack-plugin": "^1.2.0",
     "sass-loader": "^6.0.6",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.0.5",
