--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-simple-notification",
   "description": "a simple vue notification component",
-  "version": "1.0.6",
+  "version": "2.0.2",
   "author": "Ash",
   "license": "MIT",
   "scripts": {
@@ -32,6 +32,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^1.1.4",
     "node-sass": "^4.5.3",
     "nyan-progress-webpack-plugin": "^1.2.0",
