--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vue-simple-notification",
   "description": "a simple vue notification component",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "author": "Ash",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot --host 0.0.0.0",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "main": "dist/index.js",
